--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "repositories",
+  "name": "@warreninc/repositories",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
