--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@warreninc/validators",
+  "name": "@warreninc/server",
   "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
