added repository url to packages

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "lint-faster": "tsc --noEmit && eslint '*/**/*.{js,ts}' --ignore-path .gitignore --quiet"
   },
   "dependencies": {
-    "@warreninc/validators": "^0.0.0",
     "@types/jest": "^24.0.17",
-    "@types/node": "^12.7.1"
+    "@types/node": "^12.7.1",
+    "@warreninc/validators": "^0.0.3"
   }
 }
