--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": "https://github.com/leonardodalcin/node-express-typescript-npm-boilerplate/tree/master/packages/validators",
   "scripts": {
     "build": "tsc"
   }
