--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,22 +1,11 @@
 {
   "compilerOptions": {
-    "pretty": true,
     "target": "esnext",
-    "outDir": "dist",
+    "module": "commonjs",
+    "declaration": true,
+    "declarationMap": true,
     "sourceMap": true,
-    "noEmitOnError": true,
-
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictPropertyInitialization": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-
-    "alwaysStrict": true,
-    "preserveConstEnums": true,
-    "newLine": "lf",
-
-    "types": []
+    "strict": true,
+    "composite": true
   }
 }
