--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,9 @@
 {
-  "compilerOptions": {
-    "pretty": true,
-    "target": "esnext",
-    "rootDir": ".",
-
-    "sourceMap": true,
-    "noEmitOnError": true,
-
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictPropertyInitialization": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-
-    "alwaysStrict": true,
-    "preserveConstEnums": true,
-    "newLine": "lf",
-
-    "module": "commonjs",
-    "outDir": "built",
-    "types": [
-      "node",
-      "jest"
-    ],
-    "baseUrl": ".",
-    "paths": {
-      "@business-rules/*": ["source/business-rules/*"]
-    }
-  },
-  "include": [
-    "source/**/*"
-  ],
-  "exclude": [
-    "node_modules"
+  "extends": "tsconfig-base",
+  "files": [],
+  "references": [
+    { "path": "repositories" },
+    { "path": "server" },
+    { "path": "validators" }
   ]
 }
