--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+/node_modules/
+/dist/
 
-**/node_modules/
-packages/*/dist
+/packages/*/dist/
+/packages/*/node_modules/
+/packages/*/tsconfig.tsbuildinfo
+
 /yarn-error.log
 /.eslintcache
