--- a/packages/repositories/tsconfig.json
+++ b/packages/repositories/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig-base.json",
   "compilerOptions": {
+    "declaration": true,
+    "declarationMap": true,
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "../../dist"
   }
 }
