--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig-base.json",
   "compilerOptions": {
+    "declaration": true,
+    "declarationMap": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "rootDir": "src",
