--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../../tsconfig-base",
-  "declaration": true,
-  "outDir": "dist",
-  "baseUrl": "./",
-  "exclude": [
-    "node_modules"
-  ]
+  "extends": "../../tsconfig-base.json",
+  "compilerOptions": {
+    "declaration": true,
+    "declarationMap": true,
+    "rootDir": "src",
+    "outDir": "dist"
+  }
 }
