--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "scripts": {
     "start": "node ./dist/index.js",
+    "prestart": "yarn build && yarn lint",
     "test": "jest",
 
+
     "lint": "eslint '*/**/*.{js,ts}' --ignore-path .gitignore --cache --fix",
-    "build": "tsc -b packages/repositories packages/server packages/validators",
+    "build": "tsc -b src packages/repositories packages/server packages/validators",
 
     "publish-warren-packages": "lerna publish",
     "list-warren-packages": "yarn workspaces info"
