--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/leonardodalcin/node-express-typescript-npm-boilerplate/tree/master/packages/server",
   "dependencies": {
     "@types/express": "^4.17.0",
-    "@warreninc/repositories": "0.0.4",
+    "@warreninc/services": "0.0.4",
     "express": "^4.17.1"
   }
 }
